kubernetes/namespaces/code-jam/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-jam
  labels:
    name: code-jam
