kubernetes/namespaces/code-jam/reference-grants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-nginx-gateway-to-code-jam
  namespace: code-jam
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Service
