kubernetes/namespaces/code-jam/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winner-grand-gardenias
  namespace: code-jam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gardenias
  template:
    metadata:
      labels:
        app: gardenias
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: gardenias
        image: ghcr.io/swfarnsworth/cj12-grand-gardenias:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 150Mi
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winner-tubular-tulips
  namespace: code-jam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tulips
  template:
    metadata:
      labels:
        app: tulips
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: tulips
        image: ghcr.io/swfarnsworth/cj12-tubular-tulips:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 150Mi
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winner-monumental-monsteras
  namespace: code-jam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monsteras
  template:
    metadata:
      labels:
        app: monsteras
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: monsteras
        image: ghcr.io/swfarnsworth/cj12-monumental-monsteras:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 250Mi
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 8080
