kubernetes/namespaces/code-jam/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gardenias
  namespace: code-jam
spec:
  selector:
    app: gardenias
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: tulips
  namespace: code-jam
spec:
  selector:
    app: tulips
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: monsteras
  namespace: code-jam
spec:
  selector:
    app: monsteras
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
